# finalert

./: .gitignore  LICENSE  MANIFEST.in  README.md  pushplus.md  pyproject.toml  telegram.md  tqdm.md
src/finalert/: __init__.py  __main__.py  cli.py  config.py  core.py  exceptions.py  tqdm.py
src/finalert/providers/: __init__.py  base.py  email.py  pushplus.py  telegram.py  webhook.py
tests/: test_cli.py  test_config.py  test_core.py  test_providers.py  test_tqdm.py
