[project.urls]
Homepage = "https://github.com/xuwkk/finalert"
Repository = "https://github.com/xuwkk/finalert"
Issues = "https://github.com/xuwkk/finalert/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finalert"
version = "0.1.0"
description = "Finally, an alert when your code is done"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Finalert contributors" }]
keywords = ["notification", "telegram", "email", "webhook", "jobs"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.scripts]
finalert = "finalert.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
